<?xml version="1.0" encoding="utf-8"?>

<resources>
    
    <string name="account_type">eu.nerdz.app</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in</string>
    <string name="app_name">Nerdz Messenger</string>
    <string name="authtoken_type">NerdzU</string>
    <string name="conversation_list">Conversations</string>
    <string name="data_nerdzid">NerdzID</string>
    <string name="data_nerdzu">NerdzU</string>
    <string name="error_account_already_present">Only one NERDZ account is allowed</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_login">Login data is invalid.</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="login_greeting">Sign in with your NERDZ account:</string>
    <string name="login_login">Sign in</string>
    <string name="login_progress_signing_in">Signing in…</string>
    <string name="login_successful">NERDZ username %s successfully added!</string>
    <string name="login_welcome"><center><font size="72">NERDZ</font></center></string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="service_name">Nerdz</string>
    <string name="splash_description">NERDZ Messenger is loading…</string>
    
</resources>
